Added new pics and temp video

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="../assets/img/apple-touch-icon.png">
-    <link rel="icon" href="../assets/img/favicon.png">
+    <link rel="icon" href="assets/img/reatreatsandvenuesfaviconcopy.png">
   </head>
 
   <body>
@@ -26,18 +26,18 @@
         <div class="navbar-left">
           <button class="navbar-toggler" type="button">&#9776;</button>
           <a class="navbar-brand" href="#">
-            <img class="logo-dark" src="assets/img/logo/trello.png" alt="logo">
-            <img class="logo-light" src="assets/img/logo/trello-light.png" alt="logo">
+            <img class="logo-dark" src="assets/img/logo/retreatsandvenues-tipi.png" alt="logo">
+            <img class="logo-light" src="assets/img/logo/retreatsandvenueslight.png" alt="logo">
           </a>
         </div>
 
         <section class="navbar-mobile">
           <nav class="nav nav-navbar ml-auto">
-            <!-- <a class="nav-link active" href="#">Home</a>
+            <!-- <a class="nav-link active" href="https://retreatsandvenues.com/my-account/my-listings/">Home</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Pricing</a>
             <a class="nav-link" href="#">Contact</a> -->
-            <a class="btn btn-xl btn-round btn-success px-7" href="#">Get Started Today</a>
+            <a class="btn btn-xl btn-round btn-success px-7" href="https://retreatsandvenues.com/my-account/my-listings/">Back to Profile</a>
           </nav>
         </section>
 
@@ -55,7 +55,7 @@
             <h1>More Group Bookings with Promoted Listings</h1>
             <p class="lead mt-5">We work closely with Companies, Retreat and Event organisors to help them find their perfect venue. Stand out from the Crowd</p>
             <hr class="w-10 my-7">
-            <a class="btn btn-xl btn-round btn-success px-7" href="#">Get Started Today</a>
+            <a class="btn btn-xl btn-round btn-success px-7" href="https://retreatsandvenues.com/my-account/my-listings/">Get Started Today</a>
           </div>
 
           <div class="w-100"></div>
@@ -63,7 +63,8 @@
           <div class="col-auto align-self-end mx-auto">
             <div class="media align-items-center">
               <div class="mr-4">
-                <a class="btn btn-xs btn-circle btn-warning" href="https://www.youtube.com/embed/M5S_JBRjd1s" data-provide="lightbox"><i class="fa fa-play"></i></a>
+                <!-- <a class="btn btn-xs btn-circle btn-warning" href="https://www.youtube.com/embed/M5S_JBRjd1s" data-provide="lightbox"><i class="fa fa-play"></i></a> -->
+                <a class="btn btn-xs btn-circle btn-warning" href="https://www.youtube.com/watch?v=JhSojtU48RA" data-provide="lightbox"><i class="fa fa-play"></i></a>
               </div>
               <div class="media-body opacity-60">2:53 minutes</div>
             </div>
@@ -119,18 +120,18 @@
 
             <div class="col-md-6 align-self-center pb-7">
               <h3>More Than You Think</h3>
-              <p>A dull and avoid children was of neighbours on be into could on rationally it the survey monitors alone, leave forward by around a temple. The time. Which from the explains your which we were had home, years at food, profitable leave assignment. Manipulate stupid again. Have for view news following in and economic are with ran him.</p>
+              <p>On top of just a top of the list appearence. We go to work for you. We activily search out the retreat, event and wedding organisors who are looking to take their groups to an incredible location and enjoy an experience</p>
 
               <div class="row mt-7">
                 <div class="col-6">
                   <p class="text-warning lead-5"><i class="fa fa-tv"></i></p>
-                  <h5>Productivity</h5>
-                  <p>His everything its from of safe from her the have owner avoid violin, either little defined brown.</p>
+                  <h5>Marketing</h5>
+                  <p>We reach out to our extended network as well as to use various digital marketing techniques to bring customers in the door</p>
                 </div>
 
                 <div class="col-6">
                   <p class="text-danger lead-5"><i class="fa fa-code"></i></p>
-                  <h5>Synchronize</h5>
+                  <h5>Promotion</h5>
                   <p>His everything its from of safe from her the have owner avoid violin, either little defined brown.</p>
                 </div>
               </div>
@@ -268,7 +269,7 @@
                       </p>
                       <br>
                       <div>
-                        <a class="btn btn-round btn-outline-secondary w-200" href="#" data-bind-href="pricing" data-monthly="#monthly" data-yearly="#yearly">Get Started</a>
+                        <a class="btn btn-round btn-outline-secondary w-200" href="https://retreatsandvenues.com/my-account/my-listings/" data-bind-href="pricing" data-monthly="#monthly" data-yearly="#yearly">Get Started</a>
                       </div>
                     </div>
                   </div>
@@ -299,7 +300,7 @@
                       </p>
                       <br>
                       <div>
-                        <a class="btn btn-round btn-secondary w-200" href="#" data-bind-href="pricing" data-monthly="#monthly" data-yearly="#yearly">Get Started</a>
+                        <a class="btn btn-round btn-secondary w-200" href="https://retreatsandvenues.com/my-account/my-listings/" data-bind-href="pricing" data-monthly="#monthly" data-yearly="#yearly">Get Started</a>
                       </div>
                     </div>
                   </div>
@@ -323,13 +324,13 @@
         <div class="container">
           <header class="section-header">
             <small>Try It Now</small>
-            <h2 class="lead-8"><strong>A Team that works for you.</strong></h2>
+            <h2 class="lead-8"><strong>A dedicated Team working for you.</strong></h2>
             <hr>
-            <p class="lead-2">You could spend hours online, at your computer, trying to attract new clients. Or you could let our experts handle it. On average, our design and digital marketing specialists save retreats and venues eight hours of work per week.</p>
+            <p class="lead-2">Our experts are trained to help find our customers new clients. You could spend hours online at you computer or you could let our experts help you. Our design, event and digital marketing teams save retreats and venue customers on average 8 hours of work a month.</p>
           </header>
 
           <p class="text-center">
-            <a class="btn btn-lg btn-success w-250" href="#">Try it now</a><br>
+            <a class="btn btn-lg btn-success w-250" href="https://retreatsandvenues.com/my-account/my-listings/">Try it now</a><br>
 <!--             <small class="text-lighter">Already use Trello? <a href="#">Log in</a></small>
  -->          </p>
         </div>
